--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -55,6 +55,7 @@
                   'fa-line-chart fa-lg': widget.WidgetType == 'LineGraph',
                   'fa-pie-chart fa-lg': widget.WidgetType == 'PieChart' || widget.WidgetName == 'CategorySpendRewards',
                   'fa-code fa-code': widget.WidgetName == 'StaticHtml',
+                  'fa-scissors': widget.WidgetName == 'PageBreak',
                   'fa-id-card-o': widget.WidgetName == 'SegmentBasedContent',
                   'fa-tags': widget.WidgetName == 'HomeLoanSummaryTaxPurpose' || widget.WidgetName == 'WealthHomeLoanSummaryTaxPurpose',
                   'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment',
