--- a/GenerateStatementRenderEngine/Resources/css/ltr.css
+++ b/GenerateStatementRenderEngine/Resources/css/ltr.css
@@ -324,10 +324,18 @@
     text-align: right;
 }
 
+.LoanTransactionTable td {
+    padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+    height: 23px !important;
+}
+
 .customTable td {
     padding: 0px 25px;
     font-family: 'Mark Pro Regular';
     font-size: 8pt;
+    height: 20px;
 }
 
 .customTable th {
@@ -341,7 +349,7 @@
 }
 
 .ServicesDiv {
-    background-color: #f3f3f3;
+    background-color: #F2F2F2;
     height: 250px;
     font-family: 'Mark Pro Regular';
     padding: 1.5rem !important;
@@ -349,7 +357,7 @@
 }
 
 .ServicesDiv250 {
-    background-color: #f3f3f3;
+    background-color: #F2F2F2;
     height: 250px;
     font-family: 'Mark Pro Regular';
     padding: 1.5rem !important;
@@ -377,6 +385,7 @@
     color: #fff;
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
+    font-weight: normal;
 }
 
 .LoanTransactionTable-W th {
@@ -402,7 +411,7 @@
 }
 
     .InvestmentBreakdown tbody tr:nth-of-type(odd) {
-        background-color: #f3f3f3 !important;
+        background-color: #F2F2F2 !important;
     }
 
 .InvestmentDetail td span {
@@ -418,7 +427,7 @@
 
 .card-body-header-name {
     font-size: 14pt;
-    color: #2d6444 !important;
+    color: #1C6B40 !important;
     font-weight: bolder;
     font-family: sans-serif;
 }
@@ -448,7 +457,7 @@
     font-size: 12pt;
     color: #005b00 !important;
     font-family: 'Mark Pro Regular';
-    padding: 0px 25px;
+    padding: 18px 25px;
 }
 
 .card-body-sub-header2 {
@@ -458,7 +467,7 @@
 }
 
 .TotalAmountDetailsDiv {
-    background-color: #2d6444 !important;
+    background-color: #1C6B40 !important;
     padding: 10px 25px;
     height: 60px;
     color: #fff !important;
@@ -574,7 +583,7 @@
 }
 
 .InvestmentPermanaceDiv {
-    background-color: #f3f3f3;
+    background-color: #F2F2F2;
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
     font-family: 'Mark Pro Regular';
@@ -640,7 +649,7 @@
 }
 
 .bg-success-new {
-    background-color: #2d6444 !important;
+    background-color: #1C6B40 !important;
 }
 
 .eConfirm-logo-container {
@@ -680,7 +689,7 @@
 }
 
 .paymentDueFooterBlock {
-    background-color: #f3f3f3 !important;
+    background-color: #F2F2F2 !important;
     text-align: center;
     /*padding-top: .5rem !important;
     height: 30px;*/
@@ -720,7 +729,7 @@
 }
 
 .LoanAmountDetailsDiv {
-    background-color: #2d6444 !important;
+    background-color: #1C6B40 !important;
     padding: 10px 25px;
     height: 60px;
     color: #fff !important;
@@ -734,7 +743,7 @@
 }
 
 .LoanTransactionTable tbody tr:nth-of-type(odd) .LoanTransactionTable-W tbody tr:nth-of-type(odd) {
-    background-color: #f3f3f3 !important;
+    background-color: #F2F2F2 !important;
 }
 
 .SpecialMessageDiv {
@@ -777,12 +786,12 @@
     }
 
 .PersonalLoanDetailDiv {
-    background-color: #f3f3f3;
-    padding: 10px 0px;
+    background-color: #F2F2F2;
+    padding: 20px 0px;
 }
 
 .HomeLoanDetailDiv {
-    background-color: #f3f3f3;
+    background-color: #F2F2F2;
     padding: 10px 0px;
 }
 
@@ -801,7 +810,7 @@
 .PaymentDueSpecialMessageDiv {
     font-family: 'Mark Pro Regular';
     font-size: 12pt;
-    background-color: #2d6444 !important;
+    background-color: #1C6B40 !important;
     padding: 5px 25px;
     color: #fff !important;
 }
@@ -904,7 +913,7 @@ hr {
 
 .TotalRewardPointsSpan {
     border-radius: 50% !important;
-    background-color: #2d6444 !important;
+    background-color: #1C6B40 !important;
     display: inline-block;
     width: 5rem;
     height: 5rem;
@@ -1056,7 +1065,7 @@ hr {
 }
 
 .InvestmentBreakdownW tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3 !important;
+    background-color: #F2F2F2 !important;
 }
 
 .SummaryTable td {
@@ -1105,7 +1114,7 @@ hr {
 }
 
 .MCADetailDiv {
-    background-color: #f3f3f3;
+    background-color: #F2F2F2;
     padding: 10px 0px;
 }
 
@@ -1174,7 +1183,7 @@ hr {
 }
 
     .MCATransactionTable tbody tr:nth-of-type(odd), .MCATransactionTable-W tbody tr:nth-of-type(odd) {
-        background-color: #f3f3f3 !important;
+        background-color: #F2F2F2 !important;
     }
 
 .MCATransactionTable-W th {
