--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -300,6 +300,17 @@
   .CustomerDetails p {
     margin-bottom: 0.25rem !important;
   }
+  .AgentAddress {
+    font-size: 8pt;
+    text-align: right;
+    font-family: 'Mark Pro Medium';
+    height: 110px;
+  }
+
+  .AgentAddress p {
+    margin-bottom: 0.25rem !important;
+  }
+
 
   .ClientDetails {
     font-size: 8pt;
