--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -1694,7 +1694,26 @@ a {
         font-family: 'Mark Pro Regular';
         color: rgb(0, 0, 0);
         font-size: 9pt;
-        padding-bottom: 10px !important;
+    }
+
+.mca_transaction_table {
+    width: 100%;
+    border-collapse: inherit;
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+}
+
+    .mca_transaction_table td {
+        padding: 0px 5px;
+        font-family: 'Mark Pro Regular';
+        font-size: 8pt;
+    }
+
+    .mca_transaction_table th {
+        padding: 0px 5px;
+        font-family: 'Mark Pro Regular';
+        color: rgb(0, 0, 0);
+        font-size: 9pt;
     }
 
 .mca_small_table {
@@ -2173,6 +2192,25 @@ a {
         font-size: 14px;
     }
 
+    .customTransactionTable {
+        width: 100%;
+        border-collapse: inherit;
+        font-family: 'Mark Pro Regular';
+        font-size: 8pt;
+    }
+
+        .customTransactionTable td {
+            padding: 0px 5px;
+            font-family: 'Mark Pro Regular';
+            font-size: 8pt;
+            height: 20px;
+        }
+
+        .customTransactionTable th {
+            padding: 0px 5px;
+            font-size: 8pt;
+        }
+
     .InvestorPermanaceTable td {
         padding: 0px 25px;
         font-family: 'Mark Pro Regular';
@@ -2213,8 +2251,7 @@ a {
         color: #fff;
         font-size: 14px;
         font-family: 'Mark Pro Regular';
-        font-weight: normal;
-        padding: 0px 2px;
+        font-weight: normal !important;
     }
 
     .LoanTransactionTable-W th {
