Fixed Personal Loan styles

--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -2285,7 +2285,7 @@ a {
 
     .card-body-header {
         font-size: 18px;
-        font-family: 'Mark Pro Bold';
+        font-family: 'Mark Pro Regular';
         color: rgb(0, 91, 0) !important;
     }
 
