--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -291,7 +291,7 @@
   }
 
   .CustomerDetails {
-    font-size: 8pt;
+    font-size: 9pt;
     text-align: left;
     font-family: 'Mark Pro Medium';
     height: 110px;
@@ -335,7 +335,7 @@
   .customTable td {
     padding: 0px 25px;
     font-family: 'Mark Pro Regular';
-    font-size: 8pt;
+    font-size: 9pt;
     height: 20px;
   }
 
@@ -452,7 +452,7 @@
 
   .card-body-header {
     font-size: 14pt;
-    font-family: 'Mark Pro Bold';
+    font-family: 'Mark Pro Regular';
     color: rgb(0, 91, 0) !important;
   }
 
