--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -374,7 +374,7 @@
 }
 
 .LoanTransactionTable th {
-    background-color: #1c6a41 !important;
+    background-color: #006341 !important;
     color: #fff;
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
@@ -393,6 +393,20 @@
 .LoanTransactionTable tbody, LoanTransactionTable-W tbody {
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
+}
+
+.LoanTransactionTable1 th {
+    background-color: #006341 !important;
+    color: #fff;
+    font-size: 8pt;
+    font-family: Arial;
+    font-weight: normal;
+    padding: 0px 7px;
+    border-right: solid;
+}
+.LoanTransactionTable1 tbody {
+    font-size: 8pt;
+    font-family: 'Arial';
 }
 
 .InvestmentBreakdown thead {
@@ -462,11 +476,22 @@
 }
 
 .TotalAmountDetailsDiv {
-    background-color: #1C6B40 !important;
+    background-color: #006341 !important;
     padding: 10px 25px;
     height: 60px;
     color: #fff !important;
     font-family: 'Mark Pro Regular';
+}
+.CSTotalAmountDetailsDiv {
+    background-color: #006341 !important;
+    /* padding: 10px 25px; */
+    height: 30px;
+    color: #fff !important;
+    font-family: 'arial';
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .InvestmentClosingBalanceDiv {
@@ -612,7 +637,16 @@
     font-family: 'Mark Pro Regular';
     font-size: 8pt;
 }
+.CScustomTable {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Arial';
+    font-size: 8pt;
+}
 
+    .CScustomTable td {
+        padding: 0px 5px;
+    }
 .pl-25px {
     padding-left: 25px !important;
 }
@@ -687,6 +721,18 @@
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
     line-height: 30px;
+}
+.paymentDueHeaderBlock1 {
+    background-color: #006341 !important;
+    text-align: center;
+    color: white;
+    width: 20%;
+    font-size: 8pt;
+    font-family: 'Arial';
+    justify-content: center;
+    align-items: center;
+    padding: 3px;
+    display:flex;
 }
 
 .paymentDueHeaderBlock-W {
@@ -812,6 +858,18 @@
     color: #005b00 !important;
     font-family: 'Mark Pro Bold' !important;
     font-size: 12pt !important;
+}
+.NedbankHomeLoanTxt1 {
+    color: #006341 !important;
+    font-family: Arial !important;
+    font-size: 12pt !important;
+    font-weight: 700;
+}
+.CS-header {
+    font-size: 14pt;
+    font-family: 'arial';
+    color: rgb(0, 91, 65) !important;
+    font-weight: 700;
 }
 
 .NedbankHomeLoanTxt-W {
