--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -452,7 +452,7 @@
 
   .card-body-header {
     font-size: 14pt;
-    font-family: 'Mark Pro Regular';
+    font-family: 'Mark Pro Bold';
     color: rgb(0, 91, 0) !important;
   }
 
