--- a/GenerateStatementRenderEngine/Resources/css/site.css
+++ b/GenerateStatementRenderEngine/Resources/css/site.css
@@ -2285,7 +2285,7 @@
 
     .card-body-header {
         font-size: 18px;
-        font-family: 'Mark Pro Regular';
+        font-family: 'Mark Pro Bold';
         color: rgb(0, 91, 0) !important;
     }
 
@@ -2483,7 +2483,7 @@
         float: right;
         margin-right: 35px;
         color: gray;
-        font-size: 12px;
+        font-size: 9px;
         font-family: 'Mark Pro Regular'
     }
 
