--- a/GenerateStatementRenderEngine/Resources/css/ltr.css
+++ b/GenerateStatementRenderEngine/Resources/css/ltr.css
@@ -440,7 +440,7 @@
 
 .card-body-header {
     font-size: 14pt;
-    font-family: 'Mark Pro Regular';
+    font-family: 'Mark Pro Bold';
     color: rgb(0, 91, 0) !important;
 }
 
@@ -676,7 +676,7 @@
     float: right;
     margin-right: 2.25rem !important;
     color: #666666;
-    font-size: 10pt;
+    font-size: 9pt;
     font-family: 'Mark Pro Regular'
 }
 
