--- a/GenerateStatementRenderEngine/Resources/css/ltr.css
+++ b/GenerateStatementRenderEngine/Resources/css/ltr.css
@@ -291,7 +291,7 @@
 }
 
 .CustomerDetails {
-    font-size: 9pt;
+    font-size: 8pt;
     text-align: left;
     font-family: 'Mark Pro Medium';
     height: 110px;
@@ -329,6 +329,14 @@
     font-family: 'Mark Pro Regular';
     font-size: 8pt;
     height: 23px !important;
+}
+
+.custom-bold-font {
+    font-family: 'Mark Pro Bold' !important;
+}
+
+.custom-paragraph {
+    line-height: 28px !important;
 }
 
 .customTable td {
@@ -412,6 +420,7 @@
     color: #fff;
     font-size: 8pt;
     font-family: 'Mark Pro Regular';
+    font-weight: normal !important;
 }
 
 .LoanTransactionTable tbody, .LoanTransactionTable-W tbody {
