Preview code changes

--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -300,6 +300,7 @@
   .CustomerDetails p {
     margin-bottom: 0.25rem !important;
   }
+
   .AgentAddress {
     font-size: 8pt;
     text-align: right;
@@ -941,6 +942,75 @@
     padding-bottom: .5rem !important;
     font-size: 12pt;
   }
+
+  .CScustomTable {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Arial';
+    font-size: 9pt;
+    text-align: left;
+  }
+
+  .CorporateSaverTable {
+    height: 23px !important;
+    font-size: 9p !important;
+  }
+
+  .NedbankHomeLoanTxt1 {
+    color: #006341 !important;
+    font-family: Arial !important;
+    font-size: 12pt !important;
+    font-weight: 700;
+  }
+
+  .LoanTransactionTable1 th {
+    background-color: #006341 !important;
+    color: #fff;
+    font-size: 8pt;
+    font-family: Arial;
+    font-weight: normal;
+    padding: 0px 7px;
+    border-right: solid;
+  }
+
+  .LoanTransactionTable1 tbody {
+    font-size: 8pt;
+    font-family: 'Arial';
+  }
+
+  .CS-header {
+    font-size: 14pt;
+    font-family: 'arial';
+    color: rgb(0, 91, 65) !important;
+    font-weight: 700;
+    text-align: left;
+  }
+
+  .paymentDueHeaderBlock1 {
+    background-color: #006341 !important;
+    text-align: center;
+    color: white;
+    width: 20%;
+    font-size: 8pt;
+    font-family: 'Arial';
+    justify-content: center;
+    align-items: center;
+    padding: 3px;
+    display: flex;
+  }
+
+  .CSTotalAmountDetailsDiv {
+    background-color: #006341 !important;
+    /* padding: 10px 25px; */
+    height: 30px;
+    color: #fff !important;
+    font-family: 'arial';
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 
   #PersonalLoanDetailTable tr:first-child td {
     font-family: 'Mark Pro Bold';
