--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -2322,9 +2322,8 @@ a {
     }
 
     .card-body-header-name-dear {
-        font-size: 18pt;
-        color: #1C6B40 !important;
-        font-weight: bolder;
+        font-size: 10pt;
+        color: black !important;
         font-family: 'Mark Pro Bold';
     }
 
