--- a/GenerateStatementRenderEngine/Resources/css/site.css
+++ b/GenerateStatementRenderEngine/Resources/css/site.css
@@ -2312,9 +2312,8 @@
     }
 
     .card-body-header-name-dear {
-        font-size: 18pt;
-        color: #1C6B40 !important;
-        font-weight: bolder;
+        font-size: 10pt;
+        color: black !important;
         font-family: 'Mark Pro Bold';
     }
 
