--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -465,7 +465,7 @@
   .card-body-header {
     font-size: 14pt;
     font-family: 'Mark Pro Regular';
-    color: rgb(0, 91, 0) !important;
+    color: #006341 !important;
   }
 
   .card-body-header-name {
