--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -334,6 +334,7 @@
 .customTable th {
     padding: 0px 25px;
     font-size: 8pt;
+    font-weight: normal !important;
 }
 
 .InvestorPermanaceTable td {
