--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -2194,6 +2194,7 @@ a {
     .customTable th {
         padding: 0px 25px;
         font-size: 14px;
+        font-weight: normal !important;
     }
     .CScustomTable {
         width: 100%;
