--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -358,6 +358,7 @@
   .customTable th {
     padding: 0px 25px;
     font-size: 8pt;
+    font-weight: normal !important;
   }
 
   .customTransactionTable {
